[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/icons/White/1x/previous.png" type="Texture" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Minigolf.gd" type="Script" id=6]
[ext_resource path="res://assets/environment/ground_grass.glb" type="PackedScene" id=9]
[ext_resource path="res://assets/environment/tree_default.glb" type="PackedScene" id=10]
[ext_resource path="res://assets/environment/tree_default_fall.glb" type="PackedScene" id=11]
[ext_resource path="res://assets/environment/tree_default_dark.glb" type="PackedScene" id=12]
[ext_resource path="res://assets/environment/stone_largeA.glb" type="PackedScene" id=13]
[ext_resource path="res://assets/environment/stone_largeB.glb" type="PackedScene" id=14]
[ext_resource path="res://assets/environment/tree_blocks.glb" type="PackedScene" id=15]
[ext_resource path="res://assets/environment/tree_plateau.glb" type="PackedScene" id=16]
[ext_resource path="res://assets/fonts/ARDARLING.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/ui/blue_button03.png" type="Texture" id=18]
[ext_resource path="res://assets/icons/White/2x/left.png" type="Texture" id=19]
[ext_resource path="res://default_theme.tres" type="Theme" id=20]
[ext_resource path="res://assets/controls/transparentDark/transparentDark09.png" type="Texture" id=21]
[ext_resource path="res://assets/icons/White/1x/forward.png" type="Texture" id=22]
[ext_resource path="res://assets/icons expansion/White/1x/fightJoy_26.png" type="Texture" id=23]
[ext_resource path="res://assets/icons expansion/White/1x/fightJoy_19.png" type="Texture" id=24]
[ext_resource path="res://assets/sounds/nope.mp3" type="AudioStream" id=25]
[ext_resource path="res://assets/sounds/phaserUp3.ogg" type="AudioStream" id=26]
[ext_resource path="res://assets/vignette.png" type="Texture" id=27]

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.4

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
background_energy = 6.0
fog_enabled = true
fog_color = Color( 0.321569, 0.658824, 1, 0.337255 )
fog_depth_end = 79.5
fog_depth_curve = 0.659753
ss_reflections_max_steps = 164
ss_reflections_fade_in = 0.791703
ss_reflections_fade_out = 0.965936
ss_reflections_roughness = false
dof_blur_far_distance = 6.13
dof_blur_far_transition = 6.0
dof_blur_far_quality = 2
dof_blur_near_distance = 3.5
glow_enabled = true
glow_strength = 1.12
adjustment_enabled = true
adjustment_brightness = 1.2
adjustment_contrast = 1.23
adjustment_saturation = 1.68

[sub_resource type="BoxShape" id=3]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TimerBackground:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TimerLabel:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Clock:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TimerHighlight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TimerBackground:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TimerLabel:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.956863, 0.286275, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Clock:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0 ]
}

[node name="Minigolf" type="Spatial"]
script = ExtResource( 6 )

[node name="Environment" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="Ground" parent="Environment" instance=ExtResource( 9 )]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 5, 0 )

[node name="tree_default" parent="Environment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -6 )

[node name="tree_default_dark" parent="Environment" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -4 )

[node name="tree_default_fall" parent="Environment" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -6 )

[node name="stone_largeA" parent="Environment" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5 )

[node name="stone_largeA2" parent="Environment" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )

[node name="stone_largeB" parent="Environment" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 1 )

[node name="tree_blocks" parent="Environment" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="tree_blocks2" parent="Environment" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1 )

[node name="tree_plateau" parent="Environment" instance=ExtResource( 16 )]

[node name="Ball" parent="." groups=[
"ball",
] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99528, 0.393408, 1.64717 )
mass = 0.714286
physics_material_override = SubResource( 7 )
continuous_cd = true
can_sleep = false
axis_lock_angular_y = true

[node name="BallLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.99528, 0.840539, 1.50917 )
light_energy = 3.575
shadow_enabled = true
spot_angle = 52.15
spot_angle_attenuation = 2.21914

[node name="CameraPivot" type="Position3D" parent="."]

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3.24853, 3.46161 )
current = true
size = 3.99146
enabled = true

[node name="Tween" type="Tween" parent="CameraPivot"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.911159, 0.412055, 0, -0.412055, 0.911159, 0, 4.2141, 4.79669 )
light_energy = 0.7

[node name="DayNightTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="DayNightTween" type="Tween" parent="."]

[node name="Ground" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, -2.65595, 0 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TitleContainer" type="CenterContainer" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/TitleContainer"]
margin_left = 421.0
margin_top = 24.0
margin_right = 602.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
text = "REVERSE GOLF"

[node name="TimerBackground" type="Sprite" parent="CanvasLayer"]
position = Vector2( 912, 40 )
texture = ExtResource( 18 )

[node name="Clock" type="Control" parent="CanvasLayer"]
margin_left = 840.0
margin_top = 40.0
margin_right = 880.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerIconTop" type="Sprite" parent="CanvasLayer/Clock"]
position = Vector2( 0, -5 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 19 )

[node name="TimerIconBottom" type="Sprite" parent="CanvasLayer/Clock"]
position = Vector2( 0, 5 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 19 )

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
margin_left = 892.0
margin_top = 20.0
margin_right = 996.0
margin_bottom = 56.0
input_pass_on_modal_close_click = false
theme = ExtResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Sprite" parent="CanvasLayer"]
position = Vector2( 32, 568 )
rotation = -3.14159
texture = ExtResource( 22 )

[node name="Previous" type="Sprite" parent="CanvasLayer"]
position = Vector2( 103, 567 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 52.0
margin_top = 548.0
margin_right = 106.0
margin_bottom = 584.0
theme = ExtResource( 20 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 127.0
margin_top = 548.0
margin_right = 181.0
margin_bottom = 584.0
theme = ExtResource( 20 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="CanvasLayer"]
margin_left = 112.0
margin_top = 96.0
margin_right = 152.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Control" parent="CanvasLayer/Controls"]
margin_left = -18.0
margin_top = -7.0
margin_right = 22.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 64, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransparentDark09" type="Sprite" parent="CanvasLayer/Controls/Right"]
position = Vector2( 64, 16 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 21 )

[node name="RightLabel" type="Label" parent="CanvasLayer/Controls/Right"]
margin_left = 22.0
margin_top = -9.0
margin_right = 112.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 45, 24 )
theme = ExtResource( 20 )
text = "D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Control" parent="CanvasLayer/Controls"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -70, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransparentDark09" type="Sprite" parent="CanvasLayer/Controls/Left"]
position = Vector2( -70, 0 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 21 )

[node name="LeftLabel" type="Label" parent="CanvasLayer/Controls/Left"]
margin_left = -114.0
margin_top = -24.0
margin_right = -24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 45, 24 )
theme = ExtResource( 20 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Control" parent="CanvasLayer/Controls"]
margin_left = -6.0
margin_top = 25.0
margin_right = 34.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( -2, -72 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransparentDark09" type="Sprite" parent="CanvasLayer/Controls/Up"]
position = Vector2( -2, -71 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 21 )

[node name="UpLabel" type="Label" parent="CanvasLayer/Controls/Up"]
margin_left = -45.0
margin_top = -97.0
margin_right = 45.0
margin_bottom = -49.0
rect_pivot_offset = Vector2( 45, 24 )
theme = ExtResource( 20 )
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Control" parent="CanvasLayer/Controls"]
margin_left = -8.0
margin_top = 128.0
margin_right = 32.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, -65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransparentDark09" type="Sprite" parent="CanvasLayer/Controls/Down"]
position = Vector2( 0, -65 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 21 )

[node name="DownLabel" type="Label" parent="CanvasLayer/Controls/Down"]
margin_left = -43.0
margin_top = -89.0
margin_right = 47.0
margin_bottom = -41.0
rect_pivot_offset = Vector2( 45, 24 )
theme = ExtResource( 20 )
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/RESET = SubResource( 5 )
anims/TimerHighlight = SubResource( 6 )

[node name="FightJoy26" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 551 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 23 )

[node name="AxisMeter1" type="ColorRect" parent="CanvasLayer"]
margin_left = 512.0
margin_top = 568.0
margin_right = 532.0
margin_bottom = 578.0
rect_pivot_offset = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightJoy19" type="Sprite" parent="CanvasLayer"]
position = Vector2( 965, 320 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 24 )

[node name="AxisMeter2" type="ColorRect" parent="CanvasLayer"]
margin_left = 988.0
margin_top = 316.0
margin_right = 1008.0
margin_bottom = 326.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 27 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="FallDownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -5.0

[node name="GoalSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -5.0

[connection signal="timeout" from="DayNightTimer" to="." method="_on_DayNightTimer_timeout"]
[connection signal="body_entered" from="Ground" to="." method="_on_Ground_body_entered"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="finished" from="FallDownSound" to="." method="_on_FallDownSound_finished"]
[connection signal="finished" from="GoalSound" to="." method="_on_GoalSound_finished"]
